--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "pig-game",
   "version": "1.0.0",
   "description": "Throw Dice",
-  "main": "script.js",
+  "default": "index.html",
   "devDependencies": {
     "parcel": "2.6.2"
   },
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html"
+    "build": "parcel build index.html --dist-dir ./dist"
   },
   "author": "Pitigoiu",
   "license": "ISC",
